[package]
name = "rustProxy"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["stream", "json"] }
once_cell = "1.19"
urlencoding = "2"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1.17"
dotenvy = "0.15"