[package]
name = "rustProxy"
version = "1.0.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
actix-web = { version = "4.4", features = ["compress-gzip", "compress-brotli"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
url = "2.4"
urlencoding = "2.1"
base64 = "0.21"
serde_json = "1.0"
dotenvy = "0.15"
num_cpus = "1.16"
once_cell = "1.19"
regex = "1.10"